--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -10,7 +10,7 @@
 
   @include mobile {
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     flex-direction: column;
   }
 
@@ -46,57 +46,61 @@
     position: relative;
 
     @include mobile {
-      padding: 50px;
+      padding: 20px;
       width: 100%;
     }
 
-
     .phoneSvg {
       stroke: orange;
-      position: absolute;
       margin: auto;
-      z-index: -1;
+      width: 100%;
+      max-width: 300px;
     }
 
     form {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 15px;
 
       input,
       textarea {
-        padding: 20px;
+        padding: 15px;
         background-color: transparent;
         border: 1px solid white;
         color: white;
         border-radius: 5px;
+        font-size: 16px;
 
         @include mobile {
           padding: 10px;
+          font-size: 14px;
         }
       }
 
       button {
-        padding: 20px;
+        padding: 15px;
         border: none;
         background-color: orange;
         cursor: pointer;
         font-weight: 500;
+        font-size: 16px;
 
         @include mobile {
           padding: 10px;
+          font-size: 14px;
         }
       }
     }
   }
-}
 
-.social {
-  display: flex;
-  gap: 20px;
-}
+  .social {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
 
-img {
-  width: 28px;
-  height: 28px;
+    img {
+      width: 28px;
+      height: 28px;
+    }
+  }
 }
